fix sticky header and color-picker z-index

--- a/src/main/css/components/table.css
+++ b/src/main/css/components/table.css
@@ -184,6 +184,7 @@ td.halves h4 {
 }
 
 table.absence-type-settings-table thead {
+  z-index: 1; /* color-picker should not cover the sticky header */
   position: sticky;
   top: 3.25rem; /* header height */
   @apply tw-bg-white;
